fix: awesomeplete line wrapping

--- a/frappe/public/scss/common/awesomeplete.scss
+++ b/frappe/public/scss/common/awesomeplete.scss
@@ -40,7 +40,7 @@
 			padding: var(--padding-sm);
 			color: var(--text-color);
 			border-radius: var(--border-radius);
-			white-space: normal;
+			white-space: unset;
 			@extend .ellipsis;
 			&:not(:last-child) {
 				margin-bottom: var(--margin-xs);
